@@ -230,6 +230,13 @@ BUG FIXES
         
     o   rbindlist now skips empty (0 row) items as well as NULL items. So the column types of the result are
         now taken from the first non-empty data.table. Thanks to Garrett See for reporting. Test added.
+        
+    o   setnames did not update column names correctly when passed integer column positions and those
+        column names contained duplicates, fixed. This affected the column names of queries involving
+        two or more by expressions with a named list inside {}. Thanks to Steve Lianoglou for finding and
+        fixing. Tests added.
+            DT[, {list(name1=sum(v),name2=sum(w))}, by="a,b"]  # now ok, no blank column names in result
+            DT[, list(name1=sum(v),name2=sum(w)), by="a,b"]    # ok before
 
 USER VISIBLE CHANGES
 
@@ -281,7 +288,7 @@ THANKS TO BETA TESTING (bugs caught in 1.8.3 before release to CRAN)
 
 NOTES
 
-    o   There are now 864 raw tests. test.data.table() should return precisely this number of
+    o   There are now 869 raw tests. test.data.table() should return precisely this number of
         tests passed. If not, then somehow, a slightly stale version from R-Forge is likely
         installed; please reinstall from CRAN.
 
